# chip-tool-rs

./: .gitignore  Cargo.toml  README.md  test_client.py  test_error_case.py  test_json_prefix.py  test_onoff_read.py  test_onoff_read_ontime.py  test_onoff_write.py  test_state_persistence.py  test_wait_for_commissionee.py
docs/: CHIP-TOOL_BEHAVIOR.md  IMPLEMENTATION_SUMMARY.md
src/: main.rs
